--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,14 +7,18 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: List files in the directory
+    - name: Print working directory
+      run: pwd
+    - name: List files in the root directory
       run: ls -la
+    - name: Change to project directory
+      run: cd nextjs-fastapi-framework-main
+    - name: List files in the project directory
+      run: ls -la nextjs-fastapi-framework-main
     - name: Build the Docker image
-      run: docker build . --file docker-image.yml --tag my-image-name:$(date +%s)
+      run: docker build nextjs-fastapi-framework-main --file nextjs-fastapi-framework-main/Dockerfile --tag my-image-name:$(date +%s)
